se me olvido hacer el commit xd

--- a/6IV8_MadrazoRiveraJonathan_AD/8.1 - De Excel a Python.ipynb
+++ b/6IV8_MadrazoRiveraJonathan_AD/8.1 - De Excel a Python.ipynb
@@ -26,11 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "14de0f93-5266-442d-93ec-153506cd54e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,11 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "06cd61f0-99af-412c-973a-434f6e8a91e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -529,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
