--- a/6IV8_MadrazoRiveraJonathan_AD/8.-Cadenas.ipynb
+++ b/6IV8_MadrazoRiveraJonathan_AD/8.-Cadenas.ipynb
@@ -1760,7 +1760,9 @@
    "id": "7e9bc1b9-08af-44d8-a67c-900430e218fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'Correcto' if re.fullmatch('[A-Z][a-z]+','Eva') else 'Incorrecto'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1776,7 +1778,9 @@
    "id": "a7186f93-2ec1-484f-8860-c1b8f91a71e5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'Correcto' if re.fullmatch(r'\\d{4,}','9875') else'Incorrecto'"
+   ]
   },
   {
    "cell_type": "code",
